# audit-mcp

./: .gitignore  COMPETITIVE_ANALYSIS.md  README.md  pyproject.toml
docs/: FUZZING_DESIGN.md  GPU_ACCELERATION_RESEARCH.md  IMPLEMENTATION_PLAN.md  LARGE_CODEBASE_OPTIMIZATION.md  VARIANT_HUNT_RETROSPECTIVE.md
src/audit_mcp/: __init__.py  __main__.py  _semble_build.py  async_runtime.py  browser_test.py  deep_audit.py  fast_indexer.py  generator_fuzzer.py  gpu_graph.py  http_api.py  indexer.py  lazy_preanalysis.py  partitioner.py  query_bounds.py  scanners.py  server.py  source_search.py  store.py  tasks.py  type_resolver.py
src/trailmark_mcp/: __main__.py  http_api.py  server.py
tests/: conftest.py  test_lazy_preanalysis.py  test_memory.py  test_query_bounds.py  test_tasks.py
