[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-mcp"
version = "0.1.0"
description = "MCP server wrapping Trail of Bits Trailmark for code graph analysis"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

dependencies = [
    "trailmark>=0.3.0",
    "fastmcp>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
audit-mcp = "audit_mcp.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
