[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-mcp"
version = "0.1.0"
description = "Graph-first source code audit MCP server — powered by Trailmark"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
readme = "README.md"

dependencies = [
    "trailmark>=0.3.0",
    "tree-sitter-language-pack<1.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda11x>=13.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
audit-mcp = "audit_mcp.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
